k8s/kustomize/argocd/custom-tools.yaml
#
# nimbus
# argocd deployment
# patch to add custom tooling
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      # init container to download custom tooling
      containers:
      - name: argocd-repo-server
        volumeMounts:
        - mountPath: /usr/local/bin/jb
          name: custom-tools
          subPath: jb
        - mountPath: /usr/local/bin/jsonnet
          name: custom-tools
          subPath: jsonnet
      volumes:
      - name: custom-tools
        emptyDir: {}
