k8s/kustomize/argocd/jsonnet-bundler-bin.yaml
#
# nimbus
# argocd deployment
# patch to add jsonnet bundler custom tool to argocd
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  template:
    spec:
      containers:
      - name: argocd-repo-server
        volumeMounts:
        - mountPath: /usr/local/bin/jb
          name: custom-tools
          subPath: jb
      volumes:
      - name: custom-tools
        emptyDir: {}
